Refactoring and fixes

--- a/dist.ini
+++ b/dist.ini
@@ -21,4 +21,5 @@ perl                        = 5.012
 Moo                         = 0
 utf8::all                   = 0
 JSON                        = 2.0
+YAML                        = 0.90
 
